--- a/framew/src/main/res/values/strings.xml
+++ b/framew/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">FrameW</string>
     <string name="loading">加载中,请稍后…</string>
     <string name="net_error">无可用网络，请检查网络连接</string>
+    <string name="str_chance">取消</string>
+    <string name="str_sure">确定</string>
 </resources>
